# ConvinenceTorch

./: .gitignore  README.md  deep.ipynb  linear_class.py  pyproject.toml  test.py
docs/source/: _README.md  conf.py  index.md  index.rst
src/docs/source/: conf.py
src/skeletons/: __init__.py  base_log.py  base_record.py  base_trainer.py
src/torchutils/: __init__.py
src/torchutils/skeletons/: __init__.py  base_log.py  base_memory.py  base_record.py  base_register.py  base_trainer.py
src/torchutils/trainer/: NNtrainer.py
src/trainer/: NNtrainer.py  __init__.py
tests/: linear_class.py  test_plotting_and_trainer.py
tests/save/: train_checkpoint.testloader
