# pyproject.toml
[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"


[project]
name = "ConvinenceTorch"
version = "1.0.0"
readme = 'README.md'
description = "minimalistic convenience utilities for using PyTorch"
requires-python = ">=3.8"
authors = [{name = "Nischal bhattarai", email = "nischalbhattaraipi@gmail.com"}]
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Environment :: GPU :: NVIDIA CUDA :: 11.7",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities"
]
dependencies = ["torch >= 2.0.0", "scikit-learn >=1.0", "matplotlib", "tqdm"]
keywords = ["torch", "utilities", "trainer", "neural network"]



[project.optional-dependencies]
dev = ["pandas", "nvitop"]

[project.urls]
Homepage = "https://github.com/NISCHALPI/ConvinenceTorch"