# pyproject.toml
[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"


[project]
name = "ConvinenceTorch"
version = "1.0.0"
readme = 'README.md'
description = "minimalistic convenience utilities for using PyTorch"
requires-python = ">=3.8"
authors = [{name = "Nischal bhattarai", email = "nischalbhattaraipi@gmail.com"}]
license = {file = "LICENSE"}
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Environment :: GPU :: NVIDIA CUDA :: 11.7",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities"
]
dependencies = ["torch >= 2.0.0", "scikit-learn >=1.0", "matplotlib", "tqdm", "pandas"]
keywords = ["torch", "utilities", "trainer", "neural network"]



[project.optional-dependencies]
dev = ["nvitop", "ruff", "black", "mypy", "pytest"]
doc = ["sphinx", "myst-parser", "sphinx_rtd_theme", "nbsphinx"]

[project.urls]
Homepage = "https://github.com/NISCHALPI/ConvinenceTorch"


[tool.ruff]
select =["E", "F", "I", "UP", "ANN", "ARG", "D", "RET"]
exclude = ["tests", "src/docs"]
src =['./src/torchutils']
# Ignore long lines and self annotations 
ignore =['ANN101', 'E501']


[tool.ruff.per-file-ignores]
"__init__.py" = ["E402", "F401"]

[tool.ruff.flake8-quotes]
docstring-quotes = "double"

[tool.ruff.pydocstyle]
convention = "google"



